--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400&family=Poppins:wght@500&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="./css/styles.css">
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js" integrity="sha512-bLT0Qm9VnAYZDflyKcBaQ2gg0hSYNQrJ8RilYldYQ1FxQYoCLtUjuuRuZo+fjqhx/qtq/1itJ0C2ejDxltZVFg==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+   
 </head>
 <body>
     <header>
@@ -25,23 +25,43 @@
                     <li><button>Contact Us</button></li>
                 </ul>
             </div>
-            <ul class="navbar menu-toggled">
-                <li><a href="">What we do</a></li>
-                <li><a href="">How we work</a></li>
-                <li><a href="">Who we are?</a></li>
-                <li><a href="">Articles</a></li>
-                <li class="no-border"><button>Contact Us</button></li>
-            </ul>
+            <div class="mobile-menu">
+                <ul class="burgermenu">
+                    <li><a href="">What we do</a></li>
+                    <li><a href="">How we work</a></li>
+                    <li><a href="">Who we are?</a></li>
+                    <li><a href="">Articles</a></li>
+                    <li class="no-border"><button>Contact Us</button></li>
+                </ul>
+            </div>
         </section>
     </header>
     <main>
         <section class="banner-section">
             <div class="container d-flex space-between">
-                <div class="text-logo"></div>
-                <div class="form"></div>
+                <div class="col1 text-logo">
+                    <h5>EMPOWER YOUR BUSSINESS WITH REDNODO</h5>
+                    <div>
+                        <h2 class="first-heading">Your Trusted </h2>
+                        <h2 class="d-flex align-center"><img src="./images/hubstop-logo.png" alt="">Partner</h2>
+                    </div>
+                </div>
+                <div class="col2 form">
+                    <h3>Request a <span>Consultation</span></h3>
+                    <form action="" class="d-flex">
+                        <label for="">First Name*</label><input type="text">
+                        <label for="">Last Name*</label><input type="text">
+                        <label for="">E-mail*</label><input type="text">
+                        <label for="">Phone Number*</label><input type="text">
+                        <label for="">Job Title*</label><input type="text">
+                        <label for="">Company Name*</label><input type="text">
+                        <div class="send-logo d-flex align-center space-between"><div><button>Send</button></div><img src="./images/hubstop-logo-form.png" alt=""></div>
+                    </form>
+                </div>
             </div>
         </section>
+        
     </main>
-    <script src="./js/burger-menu.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.4/jquery.min.js" integrity="sha512-pumBsjNRGGqkPzKHndZMaAG+bir374sORyzM3uulLV14lN5LyykqNk8eEeUlUkB3U0M4FApyaHraT65ihJhDpQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>    <script src="./js/burger-menu.js"></script>
 </body>
 </html>
