--- a/index.html
+++ b/index.html
@@ -8,8 +8,20 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400&family=Poppins:wght@500&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+  
+    <link
+      rel="stylesheet"
+      type="text/css"
+      href="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.9.0/slick-theme.min.css"
+      integrity="sha512-17EgCFERpgZKcm0j0fEq1YCJuyAWdz9KUtv1EjVuaOz8pDnh/0nZxmU6BBXwaaxqoi9PQXnRWqlcDB027hgv9A=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
     <link rel="stylesheet" href="./css/styles.css">
-   
 </head>
 <body>
     <header>
@@ -60,8 +72,39 @@
                 </div>
             </div>
         </section>
+        <section class="brands-slider-section">
+            <div class="container">
+                <div class="carousel">
+                    <div class="item"><img src="./images/slide1/boardingpet.png" alt=""></div>
+                    <div class="item"><img class="kindadense" src="./images/slide1/coastalluxe.png" alt=""></div>
+                    <div class="item"><img class="densemfs" src="./images/slide1/current.png" alt=""></div>
+                    <div class="item"><img class="densemfs" src="./images/slide1/sonax.png" alt=""></div>
+                    <div class="item"><img src="./images/slide1/wave.png" alt=""></div>
+                    <div class="item"><img src="./images/logo_rednodo.png" alt=""></div>
+                </div>
+            </div>
+
+        </section>
+        <section class="text-section">
+            <div class="container">
+                <h4 class="longtext">
+                    At Rednodo, we understand that the first steps in implementing a <span>robust marketing</span> <span>automation strategy</span> can be crucial_
+                   
+                </h4>
+                <h4 class="longtext">
+                    That's why we're thrilled to introduce our exclusive Subsidized Onboarding Package, designed for businesses investing in HubSpot Marketing Hub Pro and our specialized Agency Services in Marketing Automation_
+                </h4>
+            </div>
+        </section>
         
     </main>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.4/jquery.min.js" integrity="sha512-pumBsjNRGGqkPzKHndZMaAG+bir374sORyzM3uulLV14lN5LyykqNk8eEeUlUkB3U0M4FApyaHraT65ihJhDpQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>    <script src="./js/burger-menu.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.4/jquery.min.js" integrity="sha512-pumBsjNRGGqkPzKHndZMaAG+bir374sORyzM3uulLV14lN5LyykqNk8eEeUlUkB3U0M4FApyaHraT65ihJhDpQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>   
+     <script src="./js/burger-menu.js"></script>
+     <script
+     type="text/javascript"
+     src="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"
+   ></script>
+   <script type="text/javascript" src="./js/slider.js"></script>
+
 </body>
 </html>
