--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <header>
         <section class="header-section">
             <div class="container d-flex align-center space-between">
-                <img src="./images/logo_rednodo.png" alt="rednodo logo">
+                <a href="/"><img src="./images/logo_rednodo.png" alt="rednodo logo"></a>
                 <i class="fa-solid fa-bars"></i>
                 <ul class="navbar d-flex align-center">
                     <li><a href="">What we do</a></li>
@@ -95,6 +95,52 @@
                     That's why we're thrilled to introduce our exclusive Subsidized Onboarding Package, designed for businesses investing in HubSpot Marketing Hub Pro and our specialized Agency Services in Marketing Automation_
                 </h4>
             </div>
+        </section>
+        <section class="slide2-section">
+            <div class="container desktop d-flex">
+                <div class="card">
+                    <img src="./images/slide2/sales.png" alt="">
+                    <h3 class="blue">Sales Hub</h3>
+                    <p>From managing your leads to closing deals, Rednodo ensures a streamlined and efficient sales process using the Sales Hub. Boost your productivity while also enabling customer connection and growing your sales organization.</p>
+                </div>
+                <div class="card">
+                    <img src="./images/slide2/bullhorn.png" alt="">
+                    <h3 class="blue">Marketing Hub</h3>
+                    <p>Grow your list of potential leads using a strategic approach to both inbound and outbound marketing. With Rednodo we’ll guide your team in creating targeted campaigns, analyzing results, and engaging your audience with precision. </p>
+                </div>
+                <div class="card">
+                    <img src="./images/slide2/process.png" alt="">
+                    <h3 class="blue">Operations Hub</h3>
+                    <p>Easily sync and organize your customer’s data using the Operations Hub to enhance collaboration across teams. Our partnership ensures that your operations run smoothly to better automate your business processes. </p>
+                </div>
+                <div class="card">
+                    <img src="./images/slide2/customer.png" alt="">
+                    <h3 class="blue">Serivce Hub</h3>
+                    <p>Deliver exceptional customer service experiences using Rednodo’s Service Hub tool. From ticketing to customer feedback, this easy-to-use software makes it easy for your team to connect with your customers and boost productivity.</p>
+                </div>
+                <div class="card">
+                    <img src="./images/slide2/cms.png" alt="">
+                    <h3 class="blue">CMS Hub</h3>
+                    <p>Create and manage powerful and customizable websites that align perfectly with your brand. Using the CMS Hub, we optimize your online presence through extensive content management, delivering a personalized experience that captivates your audience and drives engagement. </p>
+                </div>
+                <div class="card">
+                    <img src="./images/slide2/finance.png" alt="">
+                    <h3 class="blue">Commerce Hub</h3>
+                    <p> Get paid faster with the Commerce Hub. This software easily integrates with your online store allowing you to start accepting payments quickly and grow your B2B business, driving revenue and fostering brand loyalty.  </p>
+                </div>
+            </div>
+            <section class="banner2-section">
+                <div class="container">
+                    <div class="texts">
+                        <h5>WE HERE FOR YOU</h5>
+                        <h2>Contact us to discuss how
+                            Rednodo can elevate your
+                            business through strategic
+                            HubSpot partnership.</h2>
+                        <button>Contact Us</button>
+                    </div>
+                </div>
+            </section>
         </section>
         
     </main>
