frist text provisorio

--- a/index.html
+++ b/index.html
@@ -96,6 +96,14 @@
                 </h4>
             </div>
         </section>
+        <section class="frist-section">
+            <div class="container">
+                <h5>WITH REDNODO AND HUBSTOP</h5>
+            </div>
+            <div class="frist">
+                <h1 class="big-title">Supercharge Your Growth — Supercharge Your Growth</h1>
+            </div>
+          </section>
         <section class="slide2-section">
             <div class="container desktop d-flex">
                 <div class="card">
@@ -245,12 +253,15 @@
         </section>
     </footer>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.4/jquery.min.js" integrity="sha512-pumBsjNRGGqkPzKHndZMaAG+bir374sORyzM3uulLV14lN5LyykqNk8eEeUlUkB3U0M4FApyaHraT65ihJhDpQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>   
-     <script src="./js/burger-menu.js"></script>
+    
+    <script src="./js/burger-menu.js"></script>
      <script
      type="text/javascript"
      src="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"
    ></script>
    <script type="text/javascript" src="./js/slider.js"></script>
+   <script type="text/javascript" src="./js/frist.js"></script> 
+
 
 </body>
 </html>
