--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Rednodo Hubspot</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400&family=Poppins:wght@500&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-  
+    <link rel="icon" type="image/x-icon" href="./images/favicon32.png">
     <link
       rel="stylesheet"
       type="text/css"
@@ -55,7 +55,7 @@
                     <h5>EMPOWER YOUR BUSSINESS WITH REDNODO</h5>
                     <div>
                         <h2 class="first-heading">Your Trusted </h2>
-                        <h2 class="d-flex align-center"><img src="./images/hubstop-logo.png" alt="">Partner</h2>
+                        <h2 class="d-flex align-center"><img src="./images/hubstop-logo.png" alt="hubspot logo">Partner</h2>
                     </div>
                 </div>
                 <div class="col2 form">
@@ -75,12 +75,12 @@
         <section class="brands-slider-section">
             <div class="container">
                 <div class="carousel">
-                    <div class="item"><img src="./images/slide1/boardingpet.png" alt=""></div>
-                    <div class="item"><img class="kindadense" src="./images/slide1/coastalluxe.png" alt=""></div>
-                    <div class="item"><img class="densemfs" src="./images/slide1/current.png" alt=""></div>
-                    <div class="item"><img class="densemfs" src="./images/slide1/sonax.png" alt=""></div>
-                    <div class="item"><img src="./images/slide1/wave.png" alt=""></div>
-                    <div class="item"><img src="./images/logo_rednodo.png" alt=""></div>
+                    <div class="item"><img src="./images/slide1/boardingpet.png" alt="boardingpet"></div>
+                    <div class="item"><img class="kindadense" src="./images/slide1/coastalluxe.png" alt="coastalluxe"></div>
+                    <div class="item"><img class="densemfs" src="./images/slide1/current.png" alt="current"></div>
+                    <div class="item"><img class="densemfs" src="./images/slide1/sonax.png" alt="sonax"></div>
+                    <div class="item"><img src="./images/slide1/wave.png" alt="wave"></div>
+                    <div class="item"><img src="./images/logo_rednodo.png" alt="rednodo"></div>
                 </div>
             </div>
 
@@ -107,32 +107,32 @@
         <section class="slide2-section">
             <div class="container desktop d-flex">
                 <div class="card">
-                    <img src="./images/slide2/sales.png" alt="">
+                    <img src="./images/slide2/sales.png" alt="sales">
                     <h3 class="blue">Sales Hub</h3>
                     <p>From managing your leads to closing deals, Rednodo ensures a streamlined and efficient sales process using the Sales Hub. Boost your productivity while also enabling customer connection and growing your sales organization.</p>
                 </div>
                 <div class="card">
-                    <img src="./images/slide2/bullhorn.png" alt="">
+                    <img src="./images/slide2/bullhorn.png" alt="marketing">
                     <h3 class="blue">Marketing Hub</h3>
                     <p>Grow your list of potential leads using a strategic approach to both inbound and outbound marketing. With Rednodo we’ll guide your team in creating targeted campaigns, analyzing results, and engaging your audience with precision. </p>
                 </div>
                 <div class="card">
-                    <img src="./images/slide2/process.png" alt="">
+                    <img src="./images/slide2/process.png" alt="operations">
                     <h3 class="blue">Operations Hub</h3>
                     <p>Easily sync and organize your customer’s data using the Operations Hub to enhance collaboration across teams. Our partnership ensures that your operations run smoothly to better automate your business processes. </p>
                 </div>
                 <div class="card">
-                    <img src="./images/slide2/customer.png" alt="">
+                    <img src="./images/slide2/customer.png" alt="service">
                     <h3 class="blue">Serivce Hub</h3>
                     <p>Deliver exceptional customer service experiences using Rednodo’s Service Hub tool. From ticketing to customer feedback, this easy-to-use software makes it easy for your team to connect with your customers and boost productivity.</p>
                 </div>
                 <div class="card">
-                    <img src="./images/slide2/cms.png" alt="">
+                    <img src="./images/slide2/cms.png" alt="cms">
                     <h3 class="blue">CMS Hub</h3>
                     <p>Create and manage powerful and customizable websites that align perfectly with your brand. Using the CMS Hub, we optimize your online presence through extensive content management, delivering a personalized experience that captivates your audience and drives engagement. </p>
                 </div>
                 <div class="card">
-                    <img src="./images/slide2/finance.png" alt="">
+                    <img src="./images/slide2/finance.png" alt="finance">
                     <h3 class="blue">Commerce Hub</h3>
                     <p> Get paid faster with the Commerce Hub. This software easily integrates with your online store allowing you to start accepting payments quickly and grow your B2B business, driving revenue and fostering brand loyalty.  </p>
                 </div>
@@ -232,7 +232,7 @@
         </section>
         <section class="logo-section">
             <div class="container d-flex space-between">
-                <img src="./images/logo_rednodo.png" width="191px" alt="">
+                <img src="./images/logo_rednodo.png" width="191px" alt="rednodo logo">
                 <div class="d-flex links">
                     <a href="">Terms & Conditions</a>
                     <a href="">Privacy</a>
@@ -246,8 +246,8 @@
             <div class="container d-flex space-between">
                 <p>© 2024 Todos los derechos reservados. Rednodo Digital Agency.</p>
                 <div class="d-flex">
-                    <a class="active d-flex align-center" href=""><img class="pad5" src="./images/usa.png" alt="">EN</a>
-                    <a class="d-flex align-center" href=""><img class="pad5"  src="./images/arg.png" alt="">ES</a>
+                    <a class="active d-flex align-center" href=""><img class="pad5" src="./images/usa.png" alt="usa flag">EN</a>
+                    <a class="d-flex align-center" href=""><img class="pad5"  src="./images/arg.png" alt="arg flag">ES</a>
                 </div>
             </div>
         </section>
