--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
                 <h5>WITH REDNODO AND HUBSTOP</h5>
             </div>
             <div class="frist">
-                <h1 class="big-title">Supercharge Your Growth — Supercharge Your Growth</h1>
+                <h1 class="big-title">Supercharge Your Growth — Supercharge Your Growth — Supercharge Your Growth — Supercharge Your Growth  — Supercharge Your Growth — Supercharge Your Growth — Supercharge Your Growth — Supercharge Your Growth</h1>
             </div>
           </section>
         <section class="slide2-section">
