--- a/index.html
+++ b/index.html
@@ -54,8 +54,8 @@
                 <div class="col1 text-logo">
                     <h5>EMPOWER YOUR BUSSINESS WITH REDNODO</h5>
                     <div>
-                        <h2 class="first-heading">Your Trusted </h2>
-                        <h2 class="d-flex align-center"><img src="./images/hubstop-logo.png" alt="hubspot logo">Partner</h2>
+                        <h2 class="first-heading">Your Trusted
+                        <img src="./images/hubstop-logo.png" alt="hubspot logo">Partner</h2>
                     </div>
                 </div>
                 <div class="col2 form">
@@ -205,26 +205,32 @@
                 <div class="list">
                     <h5>CONTACT US <div class="tiny"></div></h5>
                     <ul>
-                        <li>USA: +1.786.539.2727</li>
-                        <li>USA: +1.954.889.7776</li>
-                        <li>ARG: +54.11.5078.9466</li>
-                        <li>CHILE: +56.2.2979.0049</li>
-                        <li>MÉXICO: +52.81.8421.7776</li>
-                        <li>UK: +44.020.8133.3272</li>
-                        <li>team@rednodo.com</li>
+                        <li>USA: <a href="tel:+1.786.539.2727">+1.786.539.2727</a></li>
+                        <li>USA: <a href="tel:+1.954.889.7776">+1.954.889.7776</a></li>
+                        <li>ARG: <a href="tel:+54.11.5078.9466">+54.11.5078.9466</a></li>
+                        <li>CHILE: <a href="tel:+56.2.2979.0049">+56.2.2979.0049</a></li>
+                        <li>MÉXICO: <a href="tel:+52.81.8421.7776">+52.81.8421.7776</a></li>
+                        <li>UK: <a href="tel:+44.020.8133.3272">+44.020.8133.3272</a></li>
+                        <li><a href="mailto:team@rednodo.com">team@rednodo.com</a></li>
                     </ul>
                 </div>
                 <div>
                     <div class="list">
                         <h5>SEGUINOS <div class="tiny"></div></h5>
                         <ul>
-                            <li class="d-flex"><i class="fa-brands fa-behance grey-circle"></i><i class="fa-brands fa-linkedin-in grey-circle"></i><i class="fa-brands fa-facebook-f grey-circle"></i><i class="fa-brands fa-twitter grey-circle"></i><i class="fa-brands fa-instagram grey-circle"></i></li>
+                            <li class="d-flex">
+                                <a href=""><i class="fa-brands fa-behance grey-circle"></i></a>
+                                <a href=""><i class="fa-brands fa-linkedin-in grey-circle"></i></a>
+                                <a href=""><i class="fa-brands fa-facebook-f grey-circle"></i></a>
+                                <a href=""><i class="fa-brands fa-twitter grey-circle"></i></a>
+                                <a href=""><i class="fa-brands fa-instagram grey-circle"></i></a>
+                            </li>
                         </ul>
                     </div>
                     <div class="list">
                         <h5>WORK WITH US<div class="tiny"></div></h5>
                         <ul>
-                            <li>jobs@rednodo.com</li>
+                            <li><a href="mailto:jobs@rednodo.com">jobs@rednodo.com</a></li>
                         </ul>
                     </div>
                 </div>
