--- a/index.html
+++ b/index.html
@@ -103,6 +103,9 @@
             <div class="frist">
                 <h1 class="big-title">Supercharge Your Growth — Supercharge Your Growth — Supercharge Your Growth — Supercharge Your Growth  — Supercharge Your Growth — Supercharge Your Growth — Supercharge Your Growth — Supercharge Your Growth</h1>
             </div>
+            <div class="frist-mobile container">
+                <h1>Supercharge Your Growth </h1>
+            </div>
           </section>
         <section class="slide2-section">
             <div class="container desktop d-flex">
@@ -160,8 +163,10 @@
                 </div>
 
                 <form action="" class="form">
-                    <input type="text" placeholder="name">
                     <div class="d-flex input2">
+                        <input type="text" placeholder="name">
+                    </div>
+                    <div class="d-flex input2 squared">
                         <input type="text" placeholder="youremail@gmail.com"><button type="submit" class="send">Send</button>
                     </div>
                 </form>
@@ -198,7 +203,7 @@
                         <li><i class="fa-solid fa-map-location-dot blue"></i> Miami - Estados Unidos 3015</li>
                         <li>NW 107 Avenue, Suite 108.</li>
                         <li>Doral, FL 33172</li>
-                        <li>sales@rednodo.com</li>
+                        <li><a href="mailto:sales@rednodo.com">sales@rednodo.com</a></li>
                         <li>From 9:30 AM to 17:00 PM</li>
                     </ul>
                 </div>
