--- a/index.html
+++ b/index.html
@@ -171,6 +171,9 @@
                     </div>
                 </form>
 
+
+                </form>
+
             </div>
         </section>
         
