--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
                         <label for="">Phone Number*</label><input type="text">
                         <label for="">Job Title*</label><input type="text">
                         <label for="">Company Name*</label><input type="text">
-                        <div class="send-logo d-flex align-center space-between"><div><button>Send</button></div><img src="./images/hubstop-logo-form.png" alt=""></div>
+                        <div class="send-logo d-flex align-center space-between"><div><button type="submit">Send</button></div><img src="./images/hubstop-logo-form.png" alt=""></div>
                     </form>
                 </div>
             </div>
