--- a/index.html
+++ b/index.html
@@ -8,7 +8,15 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400&family=Poppins:wght@500&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <link rel="icon" type="image/x-icon" href="./images/favicon32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="./images/favicon/favicon16.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon/favicon32.png">
+    <link rel="icon" type="image/png" sizes="64x64" href="./images/favicon/favicon64.png">
+    <link rel="icon" type="image/png" sizes="128x128" href="./images/favicon/favicon128.png">
+    <link rel="icon" type="image/png" sizes="156x156" href="./images/favicon/favicon156.png">
+    <link rel="icon" type="image/png" sizes="192x192" href="./images/favicon/favicon192.png">
+    <link rel="icon" type="image/png" sizes="256x256" href="./images/favicon/favicon256.png">
+    <link rel="icon" type="image/png" sizes="512x512" href="./images/favicon/favicon512.png">
+</head>
     <link
       rel="stylesheet"
       type="text/css"
@@ -39,7 +47,7 @@
             </div>
             <div class="mobile-menu">
                 <ul class="burgermenu">
-                    <li><a href="">What we do</a></li>
+                    <li class="ptop0"><a href="">What we do</a></li>
                     <li><a href="">How we work</a></li>
                     <li><a href="">Who we are?</a></li>
                     <li><a href="">Articles</a></li>
@@ -52,14 +60,20 @@
         <section class="banner-section">
             <div class="container d-flex space-between">
                 <div class="col1 text-logo">
-                    <h5>EMPOWER YOUR BUSSINESS WITH REDNODO</h5>
+                    <h5>EMPOWER YOUR BUSINESS WITH REDNODO</h5>
                     <div>
                         <h2 class="first-heading">Your Trusted
-                        <img src="./images/hubstop-logo.png" alt="hubspot logo">Partner</h2>
+                        <img src="./images/hubstop-logo.png" alt="Hubspot logo">Partner</h2>
                     </div>
                 </div>
                 <div class="col2 form">
-                    <h3>Request a <span>Consultation</span></h3>
+                  <div class="d-flex">
+                    <h3 class="first">Request a </h3>
+                    <div class="d-flex">
+                        <h3> Consultation</h3>
+                        <div class="blueline"></div>
+                    </div>
+                  </div>  
                     <form action="" class="d-flex">
                         <label for="">First Name*</label><input type="text">
                         <label for="">Last Name*</label><input type="text">
@@ -67,7 +81,7 @@
                         <label for="">Phone Number*</label><input type="text">
                         <label for="">Job Title*</label><input type="text">
                         <label for="">Company Name*</label><input type="text">
-                        <div class="send-logo d-flex align-center space-between"><div><button type="submit">Send</button></div><img src="./images/hubstop-logo-form.png" alt=""></div>
+                        <div class="send-logo d-flex align-center space-between"><div><button type="submit">Send</button></div><img src="./images/hubstop-logo-form.png" alt="Hubspot Logo Form"></div>
                     </form>
                 </div>
             </div>
@@ -75,12 +89,15 @@
         <section class="brands-slider-section">
             <div class="container">
                 <div class="carousel">
-                    <div class="item"><img src="./images/slide1/boardingpet.png" alt="boardingpet"></div>
-                    <div class="item"><img class="kindadense" src="./images/slide1/coastalluxe.png" alt="coastalluxe"></div>
-                    <div class="item"><img class="densemfs" src="./images/slide1/current.png" alt="current"></div>
-                    <div class="item"><img class="densemfs" src="./images/slide1/sonax.png" alt="sonax"></div>
-                    <div class="item"><img src="./images/slide1/wave.png" alt="wave"></div>
-                    <div class="item"><img src="./images/logo_rednodo.png" alt="rednodo"></div>
+                    <div class="item"><img src="./images/slide1/boardingpet.png" alt="Boardingpet"></div>
+                    <div class="item"><img class="kindadense" src="./images/slide1/coastalluxe.png" alt="Coastalluxe"></div>
+                    <div class="item"><img class="densemfs" src="./images/slide1/current.png" alt="Current"></div>
+                    <div class="item"><img class="densemfs" src="./images/slide1/sonax.png" alt="Sonax"></div>
+                    <div class="item"><img src="./images/slide1/wave.png" alt="Wave"></div>
+                    <div class="item"><img src="./images/logo_rednodo.png" alt="Rednodo"></div>
+                    <div class="item"><img src="./images/slide1/66ecommerce.png" alt="66eCommerce"></div>
+                    <div class="item"><img src="./images/slide1/drzeta.png" alt="DrZeta"></div>
+                    <div class="item"><img src="./images/slide1/cargosales.png" alt="Cargosales" width="240px" height="118px"></div>
                 </div>
             </div>
 
@@ -98,7 +115,7 @@
         </section>
         <section class="frist-section">
             <div class="container">
-                <h5>WITH REDNODO AND HUBSTOP</h5>
+                <h5>WITH REDNODO AND HUBSPOT</h5>
             </div>
             <div class="frist">
                 <h1 class="big-title">Supercharge Your Growth — Supercharge Your Growth — Supercharge Your Growth — Supercharge Your Growth  — Supercharge Your Growth — Supercharge Your Growth — Supercharge Your Growth — Supercharge Your Growth</h1>
@@ -126,7 +143,7 @@
                 </div>
                 <div class="card">
                     <img src="./images/slide2/customer.png" alt="service">
-                    <h3 class="blue">Serivce Hub</h3>
+                    <h3 class="blue">Service Hub</h3>
                     <p>Deliver exceptional customer service experiences using Rednodo’s Service Hub tool. From ticketing to customer feedback, this easy-to-use software makes it easy for your team to connect with your customers and boost productivity.</p>
                 </div>
                 <div class="card">
@@ -134,7 +151,7 @@
                     <h3 class="blue">CMS Hub</h3>
                     <p>Create and manage powerful and customizable websites that align perfectly with your brand. Using the CMS Hub, we optimize your online presence through extensive content management, delivering a personalized experience that captivates your audience and drives engagement. </p>
                 </div>
-                <div class="card">
+                <div class="card mtop0">
                     <img src="./images/slide2/finance.png" alt="finance">
                     <h3 class="blue">Commerce Hub</h3>
                     <p> Get paid faster with the Commerce Hub. This software easily integrates with your online store allowing you to start accepting payments quickly and grow your B2B business, driving revenue and fostering brand loyalty.  </p>
@@ -154,7 +171,7 @@
             </div>
         </section>
         <section class="contact-forms-section">
-            <div class="lightblue-line"></div>
+
             <div class="container d-flex space-between">
                 <div class="first-col">
                     <h3>
@@ -245,7 +262,7 @@
             </div>
         </section>
         <section class="logo-section">
-            <div class="container d-flex space-between">
+            <div class="container d-flex space-between align-center">
                 <img src="./images/logo_rednodo.png" width="191px" alt="rednodo logo">
                 <div class="d-flex links">
                     <a href="">Terms & Conditions</a>
