--- a/index.html
+++ b/index.html
@@ -220,7 +220,7 @@
                     <h5>FIND US <div class="tiny"></div></h5>
                     <ul>
                         
-                        <li><i class="fa-solid fa-map-location-dot blue"></i> Miami - Estados Unidos 3015</li>
+                        <li class="aligned"><i class="fa-solid fa-map-location-dot blue"></i> Miami - Estados Unidos 3015</li>
                         <li>NW 107 Avenue, Suite 108.</li>
                         <li>Doral, FL 33172</li>
                         <li><a href="mailto:sales@rednodo.com">sales@rednodo.com</a></li>
@@ -241,7 +241,7 @@
                 </div>
                 <div>
                     <div class="list">
-                        <h5>SEGUINOS <div class="tiny"></div></h5>
+                        <h5>FOLLOW US<div class="tiny"></div></h5>
                         <ul>
                             <li class="d-flex">
                                 <a href=""><i class="fa-brands fa-behance grey-circle"></i></a>
@@ -275,7 +275,7 @@
         </section>
         <section class="grey-bar">
             <div class="container d-flex space-between">
-                <p>© 2024 Todos los derechos reservados. Rednodo Digital Agency.</p>
+                <p>© 2024 All rights reserved. Rednodo Digital Agency.</p>
                 <div class="d-flex">
                     <a class="active d-flex align-center" href=""><img class="pad5" src="./images/usa.png" alt="usa flag">EN</a>
                     <a class="d-flex align-center" href=""><img class="pad5"  src="./images/arg.png" alt="arg flag">ES</a>
