--- a/index.html
+++ b/index.html
@@ -127,32 +127,32 @@
         <section class="slide2-section">
             <div class="container desktop d-flex">
                 <div class="card">
-                    <img src="./images/slide2/sales.png" alt="sales">
+                    <img src="./images/slide2/sales.png" alt="Sales Hub">
                     <h3 class="blue">Sales Hub</h3>
                     <p>From managing your leads to closing deals, Rednodo ensures a streamlined and efficient sales process using the Sales Hub. Boost your productivity while also enabling customer connection and growing your sales organization.</p>
                 </div>
                 <div class="card">
-                    <img src="./images/slide2/bullhorn.png" alt="marketing">
+                    <img src="./images/slide2/bullhorn.png" alt="Marketing Hub">
                     <h3 class="blue">Marketing Hub</h3>
                     <p>Grow your list of potential leads using a strategic approach to both inbound and outbound marketing. With Rednodo we’ll guide your team in creating targeted campaigns, analyzing results, and engaging your audience with precision. </p>
                 </div>
                 <div class="card">
-                    <img src="./images/slide2/process.png" alt="operations">
+                    <img src="./images/slide2/process.png" alt="Operations Hub">
                     <h3 class="blue">Operations Hub</h3>
                     <p>Easily sync and organize your customer’s data using the Operations Hub to enhance collaboration across teams. Our partnership ensures that your operations run smoothly to better automate your business processes. </p>
                 </div>
                 <div class="card">
-                    <img src="./images/slide2/customer.png" alt="service">
+                    <img src="./images/slide2/customer.png" alt="Service Hub">
                     <h3 class="blue">Service Hub</h3>
                     <p>Deliver exceptional customer service experiences using Rednodo’s Service Hub tool. From ticketing to customer feedback, this easy-to-use software makes it easy for your team to connect with your customers and boost productivity.</p>
                 </div>
                 <div class="card">
-                    <img src="./images/slide2/cms.png" alt="cms">
+                    <img src="./images/slide2/cms.png" alt="CMS Hub">
                     <h3 class="blue">CMS Hub</h3>
                     <p>Create and manage powerful and customizable websites that align perfectly with your brand. Using the CMS Hub, we optimize your online presence through extensive content management, delivering a personalized experience that captivates your audience and drives engagement. </p>
                 </div>
                 <div class="card mtop0">
-                    <img src="./images/slide2/finance.png" alt="finance">
+                    <img src="./images/slide2/finance.png" alt="Commerce Hub">
                     <h3 class="blue">Commerce Hub</h3>
                     <p> Get paid faster with the Commerce Hub. This software easily integrates with your online store allowing you to start accepting payments quickly and grow your B2B business, driving revenue and fostering brand loyalty.  </p>
                 </div>
@@ -239,16 +239,16 @@
                         <li><a href="mailto:team@rednodo.com">team@rednodo.com</a></li>
                     </ul>
                 </div>
-                <div>
+                <div class="d-flex-col row10">
                     <div class="list">
                         <h5>FOLLOW US<div class="tiny"></div></h5>
                         <ul>
                             <li class="d-flex">
-                                <a href=""><i class="fa-brands fa-behance grey-circle"></i></a>
-                                <a href=""><i class="fa-brands fa-linkedin-in grey-circle"></i></a>
-                                <a href=""><i class="fa-brands fa-facebook-f grey-circle"></i></a>
-                                <a href=""><i class="fa-brands fa-twitter grey-circle"></i></a>
-                                <a href=""><i class="fa-brands fa-instagram grey-circle"></i></a>
+                                <a href="http://www.behance.net/rednodo" target="_blank"><i class="fa-brands fa-behance grey-circle"></i></a>
+                                <a href="http://www.linkedin.com/company/rednodo" target="_blank"><i class="fa-brands fa-linkedin-in grey-circle"></i></a>
+                                <a href="http://www.facebook.com/rednodo" target="_blank"><i class="fa-brands fa-facebook-f grey-circle"></i></a>
+                                <a href="http://www.twitter.com/rednodo" target="_blank"><i class="fa-brands fa-twitter grey-circle"></i></a>
+                                <a href="http://www.instagram.com/rednodo" target="_blank"><i class="fa-brands fa-instagram grey-circle"></i></a>
                             </li>
                         </ul>
                     </div>
