--- a/index.html
+++ b/index.html
@@ -202,18 +202,18 @@
                 <div class="list">
                 <h5>CONTENT <div class="tiny"></div></h5>
                     <ul class="count-2">
-                        <li><a href="">Home</a></li>
-                        <li><a href="">What we do</a></li>
-                        <li><a href="">How we work</a></li>
-                        <li><a href="">Our team</a></li>
-                        <li><a href="">Articles</a></li>
-                        <li><a href="">Contact Us</a></li>
-                        <li><a href="">Enterprise</a></li>
-                        <li><a href="">eCommerce</a></li>
-                        <li><a href="">Consulting</a></li>
-                        <li><a href="">Marketing</a></li>
-                        <li><a href="">IT</a></li>
-                        <li><a href="">Web & Support</a></li>
+                        <li><a href="https://rednodo.com/">Home</a></li>
+                        <li><a href="https://rednodo.com/whatwedo-im">What we do</a></li>
+                        <li><a href="https://rednodo.com/howwework">How we work</a></li>
+                        <li><a href="https://rednodo.com/ourteam">Our team</a></li>
+                        <li><a href="https://rednodo.com/articles">Articles</a></li>
+                        <li><a href="https://rednodo.com/contact">Contact Us</a></li>
+                        <li><a href="https://rednodo.com/enterprise">Enterprise</a></li>
+                        <li><a href="https://rednodo.com/ecommerce">eCommerce</a></li>
+                        <li><a href="https://rednodo.com/consulting">Consulting</a></li>
+                        <li><a href="https://rednodo.com/marketing">Marketing</a></li>
+                        <li><a href="https://rednodo.com/it">IT</a></li>
+                        <li><a href="https://rednodo.com/support">Web & Support</a></li>
                     </ul>
                 </div>
                 <div class="list">
