--- a/index.html
+++ b/index.html
@@ -205,7 +205,7 @@
                         <li><a href="https://rednodo.com/">Home</a></li>
                         <li><a href="https://rednodo.com/whatwedo-im">What we do</a></li>
                         <li><a href="https://rednodo.com/howwework">How we work</a></li>
-                        <li><a href="https://rednodo.com/ourteam">Our team</a></li>
+                        <li><a href="https://rednodo.com/whoweare-ourteam">Our team</a></li>
                         <li><a href="https://rednodo.com/articles">Articles</a></li>
                         <li><a href="https://rednodo.com/contact">Contact Us</a></li>
                         <li><a href="https://rednodo.com/enterprise">Enterprise</a></li>
@@ -213,7 +213,7 @@
                         <li><a href="https://rednodo.com/consulting">Consulting</a></li>
                         <li><a href="https://rednodo.com/marketing">Marketing</a></li>
                         <li><a href="https://rednodo.com/it">IT</a></li>
-                        <li><a href="https://rednodo.com/support">Web & Support</a></li>
+                        <li><a href="https://rednodo.com/web-support">Web & Support</a></li>
                     </ul>
                 </div>
                 <div class="list">
