links footer final

--- a/index.html
+++ b/index.html
@@ -209,11 +209,11 @@
                         <li><a href="https://rednodo.com/articles">Articles</a></li>
                         <li><a href="https://rednodo.com/contact">Contact Us</a></li>
                         <li><a href="https://rednodo.com/enterprise">Enterprise</a></li>
-                        <li><a href="https://rednodo.com/ecommerce">eCommerce</a></li>
+                        <li><a href="https://www.66ecommerce.com/">eCommerce</a></li>
                         <li><a href="https://rednodo.com/consulting">Consulting</a></li>
                         <li><a href="https://rednodo.com/marketing">Marketing</a></li>
                         <li><a href="https://rednodo.com/it">IT</a></li>
-                        <li><a href="https://rednodo.com/web-support">Web & Support</a></li>
+                        <li><a href="https://rednodo.com/whatwedo-ds">Web & Support</a></li>
                     </ul>
                 </div>
                 <div class="list">
