--- a/index.html
+++ b/index.html
@@ -206,7 +206,7 @@
                         <li><a href="https://rednodo.com/whatwedo-im">What we do</a></li>
                         <li><a href="https://rednodo.com/howwework">How we work</a></li>
                         <li><a href="https://rednodo.com/whoweare-ourteam">Our team</a></li>
-                        <li><a href="https://rednodo.com/articles">Articles</a></li>
+                        <li><a href="https://blog.rednodo.com/">Articles</a></li>
                         <li><a href="https://rednodo.com/contact">Contact Us</a></li>
                         <li><a href="https://rednodo.com/enterprise">Enterprise</a></li>
                         <li><a href="https://www.66ecommerce.com/">eCommerce</a></li>
