--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Rednodo Hubspot</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400&family=Poppins:wght@500&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400&family=Poppins:wght@300;400;500&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="icon" type="image/png" sizes="16x16" href="./images/favicon/favicon16.png">
     <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon/favicon32.png">
@@ -35,7 +35,7 @@
     <header>
         <section class="header-section">
             <div class="container d-flex align-center space-between">
-                <a href="/"><img src="./images/logo_rednodo.png" alt="rednodo logo"></a>
+                <img src="./images/logo_rednodo.png" alt="Rednodo - Rednodo Digital Agency">
                 <i class="fa-solid fa-bars"></i>
                 <ul class="navbar d-flex align-center">
                     <li><a href="">What we do</a></li>
@@ -63,7 +63,7 @@
                     <h5>EMPOWER YOUR BUSINESS WITH REDNODO</h5>
                     <div>
                         <h2 class="first-heading">Your Trusted
-                        <img src="./images/hubstop-logo.png" alt="Hubspot logo">Partner</h2>
+                        <img src="./images/hubstop-logo.png" alt="HusbSpot - Partner Rednodo">Partner</h2>
                     </div>
                 </div>
                 <div class="col2 form">
@@ -81,7 +81,7 @@
                         <label for="">Phone Number*</label><input type="text">
                         <label for="">Job Title*</label><input type="text">
                         <label for="">Company Name*</label><input type="text">
-                        <div class="send-logo d-flex align-center space-between"><div><button type="submit">Send</button></div><img src="./images/hubstop-logo-form.png" alt="Hubspot Logo Form"></div>
+                        <div class="send-logo d-flex align-center space-between"><div><button type="submit">Send</button></div><img src="./images/hubstop-logo-form.png" alt="HubSpot Solutions Partner Program"></div>
                     </form>
                 </div>
             </div>
@@ -89,15 +89,15 @@
         <section class="brands-slider-section">
             <div class="container">
                 <div class="carousel">
-                    <div class="item"><img src="./images/slide1/boardingpet.png" alt="Boardingpet"></div>
-                    <div class="item"><img class="kindadense" src="./images/slide1/coastalluxe.png" alt="Coastalluxe"></div>
+                    <div class="item"><img src="./images/slide1/boardingpet.png" alt="Boarding Pet"></div>
+                    <div class="item"><img class="kindadense" src="./images/slide1/coastalluxe.png" alt="Coastal Luxe"></div>
                     <div class="item"><img class="densemfs" src="./images/slide1/current.png" alt="Current"></div>
                     <div class="item"><img class="densemfs" src="./images/slide1/sonax.png" alt="Sonax"></div>
-                    <div class="item"><img src="./images/slide1/wave.png" alt="Wave"></div>
+                    <div class="item"><img src="./images/slide1/wave.png" alt="Under Wave"></div>
                     <div class="item"><img src="./images/logo_rednodo.png" alt="Rednodo"></div>
-                    <div class="item"><img src="./images/slide1/66ecommerce.png" alt="66eCommerce"></div>
-                    <div class="item"><img src="./images/slide1/drzeta.png" alt="DrZeta"></div>
-                    <div class="item"><img src="./images/slide1/cargosales.png" alt="Cargosales" width="240px" height="118px"></div>
+                    <div class="item"><img src="./images/slide1/66ecommerce.png" alt="66 eCommerce"></div>
+                    <div class="item"><img src="./images/slide1/drzeta.png" alt="Dr. Zeta"></div>
+                    <div class="item"><img src="./images/slide1/cargosales.png" alt="Cargo Sales International " width="240px" height="118px"></div>
                 </div>
             </div>
 
@@ -165,7 +165,7 @@
                     <h2>Contact us to discuss how
                         Rednodo can elevate your
                         business through strategic
-                        HubSpot partnership.</h2>
+                        HubSpot partnership</h2>
                     <button>Contact Us</button>
                 </div>
             </div>
@@ -175,7 +175,7 @@
             <div class="container d-flex space-between">
                 <div class="first-col">
                     <h3>
-                        Build your workspace today.
+                        Build your workspace today
                     </h3>
                 </div>
 
@@ -239,7 +239,7 @@
                         <li><a href="mailto:team@rednodo.com">team@rednodo.com</a></li>
                     </ul>
                 </div>
-                <div class="d-flex-col row10">
+                <div class="d-flex-col row25">
                     <div class="list">
                         <h5>FOLLOW US<div class="tiny"></div></h5>
                         <ul>
@@ -263,7 +263,7 @@
         </section>
         <section class="logo-section">
             <div class="container d-flex space-between align-center">
-                <img src="./images/logo_rednodo.png" width="191px" alt="rednodo logo">
+                <img src="./images/logo_rednodo.png" width="191px" alt="Rednodo - Rednodo Digital Agency">
                 <div class="d-flex links">
                     <a href="">Terms & Conditions</a>
                     <a href="">Privacy</a>
@@ -277,8 +277,8 @@
             <div class="container d-flex space-between">
                 <p>© 2024 All rights reserved. Rednodo Digital Agency.</p>
                 <div class="d-flex">
-                    <a class="active d-flex align-center" href=""><img class="pad5" src="./images/usa.png" alt="usa flag">EN</a>
-                    <a class="d-flex align-center" href=""><img class="pad5"  src="./images/arg.png" alt="arg flag">ES</a>
+                    <a class="active d-flex align-center" href="/"><img class="pad5" src="./images/usa.png" alt="usa flag">EN</a>
+                    <a class="d-flex align-center" href="/es/"><img class="pad5"  src="./images/arg.png" alt="arg flag">ES</a>
                 </div>
             </div>
         </section>
