--- a/index.html
+++ b/index.html
@@ -89,11 +89,11 @@
         <section class="brands-slider-section">
             <div class="container">
                 <div class="carousel">
-                    <div class="item"><img src="./images/slide1/boardingpet.png" alt="Boarding Pet"></div>
+                    <div class="item"><img src="./images/slide1/boardingpet.png" alt="Boardingpet"></div>
                     <div class="item"><img class="kindadense" src="./images/slide1/coastalluxe.png" alt="Coastal Luxe"></div>
                     <div class="item"><img class="densemfs" src="./images/slide1/current.png" alt="Current"></div>
                     <div class="item"><img class="densemfs" src="./images/slide1/sonax.png" alt="Sonax"></div>
-                    <div class="item"><img src="./images/slide1/wave.png" alt="Under Wave"></div>
+                    <div class="item"><img src="./images/slide1/wave.png" alt="Underwave"></div>
                     <div class="item"><img src="./images/logo_rednodo.png" alt="Rednodo"></div>
                     <div class="item"><img src="./images/slide1/66ecommerce.png" alt="66 eCommerce"></div>
                     <div class="item"><img src="./images/slide1/drzeta.png" alt="Dr. Zeta"></div>
@@ -277,8 +277,8 @@
             <div class="container d-flex space-between">
                 <p>© 2024 All rights reserved. Rednodo Digital Agency.</p>
                 <div class="d-flex">
-                    <a class="active d-flex align-center" href="/"><img class="pad5" src="./images/usa.png" alt="usa flag">EN</a>
-                    <a class="d-flex align-center" href="/es/"><img class="pad5"  src="./images/arg.png" alt="arg flag">ES</a>
+                    <a class="active d-flex align-center" href="https://rednodo.com/"><img class="pad5" src="./images/usa.png" alt="usa flag">EN</a>
+                    <a class="d-flex align-center" href="https://latam.rednodo.com/"><img class="pad5"  src="./images/arg.png" alt="arg flag">ES</a>
                 </div>
             </div>
         </section>
