alt, logo underwave y links footer

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                     <h5>EMPOWER YOUR BUSINESS WITH REDNODO</h5>
                     <div>
                         <h2 class="first-heading">Your Trusted
-                        <img src="./images/hubstop-logo.png" alt="HusbSpot - Partner Rednodo">Partner</h2>
+                        <img src="./images/hubstop-logo.png" alt="HubSpot - Partner Rednodo">Partner</h2>
                     </div>
                 </div>
                 <div class="col2 form">
