--- a/index-B.html
+++ b/index-B.html
@@ -267,8 +267,7 @@
                         <li class="aligned"><i class="fa-solid fa-map-location-dot blue"></i> Miami - Estados Unidos 3015</li>
                         <li>NW 107 Avenue, Suite 108.</li>
                         <li>Doral, FL 33172</li>
-                        <li><a href="mailto:sales@rednodo.com">sales@rednodo.com</a></li>
-                        <li>From 9:30 AM to 17:00 PM</li>
+                        <li class="bottom-one">From 9:30 AM to 17:00 PM</li>
                     </ul>
                 </div>
                 <div class="list">
@@ -276,11 +275,8 @@
                     <ul>
                         <li>USA: <a href="tel:+1.786.539.2727">+1.786.539.2727</a></li>
                         <li>USA: <a href="tel:+1.954.889.7776">+1.954.889.7776</a></li>
-                        <li>ARG: <a href="tel:+54.11.5078.9466">+54.11.5078.9466</a></li>
-                        <li>CHILE: <a href="tel:+56.2.2979.0049">+56.2.2979.0049</a></li>
-                        <li>MÉXICO: <a href="tel:+52.81.8421.7776">+52.81.8421.7776</a></li>
-                        <li>UK: <a href="tel:+44.020.8133.3272">+44.020.8133.3272</a></li>
-                        <li><a href="mailto:team@rednodo.com">team@rednodo.com</a></li>
+                        <li><a href="mailto:sales@rednodo.com">sales@rednodo.com</a></li>
+                        <li class="bottom-two">From 9:30 AM to 17:00 PM</li>
                     </ul>
                 </div>
                 <div class="d-flex-col row25">
